updated backend/server code files
