# server/src/config/swagger/swagger.yaml
@@ -9,6 +9,52 @@ tags:
   - name: user
     description: Operations about user
 paths:
+  /:
+    get:
+      summary: Gets the needed data for the login page
+      tags: [Index]
+      responses:
+        200:
+          description: Successfully returns the data for the login page
+  /home:
+    get:
+      summary: Gets the needed data for the home (login) page
+      tags: [Index]
+      responses:
+        200:
+          description: Sucessfully returns the data for the home (login) page
+  /login:
+    post:
+      summary: Returns an access token and user attributes if the user's entered credentials are valid
+      tags: [Index]
+      responses: 
+        200:
+          description:  Alerts the user that they logged-in successfully. Return access token and user attributes
+        422:
+          description: Username or password inputted was incorrect
+  /logout:
+    get:
+      summary: Refreshes or resets the access token of the application and destroys the created session for the local user cart
+      tags: [Index]
+      responses:
+        204:
+          description: User successfully logs out from the application
+  /register:
+    get:
+      summary: Gets the needed data for the register page
+      tags: [Index]
+      responses:
+        200:
+          description: Successfully returns the data needed for the register page
+    post:
+      summary: Registers a new user and saves it to the database
+      tags: [Index]
+      responses:
+        201: 
+          description: Returns the access tokens and user attributes if the user's entered credentials are valid
+        422:
+          description: Username or e-mail inputted already exists in the database
+    
   /users:
     get:
       summary: Returns the list of all the users
@@ -29,17 +75,146 @@ components:
       required:
         - username
         - password
+        - firstname
+        - lastname
+        - email
+        - contactNo
       properties:
         _id:
           type: string
-          description: Auto-generated ID of the user
+          description: Auto-generated ID of the user. Generated by MongoDB.
         username:
           type: string
-          description: User's given username
+          description: User's given username.
         password:
           type: string
-          description: User's encrypted password
+          description: User's encrypted password.
+        firstname:
+          type: string
+          description: User's first name.
+        lastname:
+          type: string
+          description: User's last name.
+        email:
+          type: string
+          description: User's e-mail address.
+        contactNo:
+          type: string
+          description: User's contact number.
       example:
         _id: 60d74f88e797493bc9656b60
         username: Sonson_Great
         password: $2y$12$x8Dk4QvsI6neNScldJg6wOxzp.8LtBdAgd.49EFYBK4i2XL5GxGYS
+        firstname: Sonson
+        lastname: Great
+        email: sonson_great@gmail.com
+        contactNo: 09287683291
+    Order:
+      type: object
+      required: 
+        - id
+        - name
+        - email
+        - address
+        - contactNo
+        - payMethod
+        - type
+        - quantity
+        - img
+        - status
+        - width
+        - height
+        - dateRequested
+      properties:
+        _id:
+          type: string
+          description: Auto-generated ID of the order. Generated by MongoDB.
+        id:
+          type: string
+          description: Auto-generated ID of the order using uniqid.
+        name:
+          type: string
+          description: name of the customer who ordered.
+        email:
+          type: string
+          description: e-mail address of the customer who ordered.
+        address:
+          type: string
+          description: billing address of the customer who ordered.
+        contactNo:
+          type: string
+          description: contact number of the customer who ordered.
+        payMethod:
+          type: string
+          description: payment method of the customer who ordered.
+        workerInCharge:
+          type: string
+          description: name of the worker in charge of the order. 
+        type:
+          type: string
+          description: kind of printing service needed by the customer.
+        quantity:
+          type: number
+          description: number of print needed by the customer.
+        img:
+          type: string
+          description: file path to the image uploaded by the customer.
+        price: 
+          type: number
+          description: price of the order.
+        status:
+          type: string
+          description: current status of the order.
+        width:
+          type: string
+          description: width of the order.
+        height:
+          type: string
+          description: height of the order.
+        frameEdges:
+          type: string
+          description: frame edges of a specific order.
+        frameFinishing:
+          type: string
+          description: frame finishing of a specific order.
+        dateRequested:
+          type: string
+          description: date when the order was requested.
+        dateShipped:
+          type: string
+          description: date when the order was shipped.
+    Worker:
+      type: object
+      required:
+        - username
+        - password
+        - firstname
+        - lastname
+        - email
+        - contactNo
+        - isSystemAdmin
+      properties:
+        _id: 
+          type: string
+          description: Auto-generated ID of the worker. Generated by MongoDB. 
+        username:
+          type: string
+          description: username of the worker.
+        firstname:
+          type: string
+          description: first name of the worker.
+        lastname:
+          type: string
+          description: last name of the worker. 
+        email:
+          type: string
+          description: e-mail address of the worker.
+        contactNo:
+          type: string
+          description: contact number of the worker.
+        isSystemAdmin:
+          type: boolean
+          description: determines if the worker is a system admin.
+    Cart:
+      type: object
+      description: session schema
