# server/src/controller/index_controller.js
@@ -10,28 +10,13 @@ import token from '../middleware/token.js';
 
 // index controller object for index controller methods
 const indexController = {
-  // index controller method to get to login page
-  getLogin: (req, res) => {
-    return res.status(200).json('LOGIN PAGE');
-  },
-
-  // index controller method to get to register page
-  getRegister: (req, res) => {
-    return res.status(200).json('REGISTER PAGE');
-  },
-
-  // index controller method to get to home page
-  getHome: (req, res) => {
-    return res.status(200).json('HOME PAGE');
-  },
-
   // index controller method to logout user
   getLogout: (req, res) => {
-    // refreshTokens = refreshTokens.filter(token => token != req.body.token);
-    // res.sendStatus(204);
-
-    // destroy user cart session
-    if (typeof req.session.cart !== 'undefined') {
+    // destroy user cart session and token
+    if (
+      typeof req.session.cart !== 'undefined' ||
+      typeof req.session.token !== 'undefined'
+    ) {
       req.session.destroy();
     }
 
@@ -41,40 +26,42 @@ const indexController = {
   // index controller method to login user
   postLogin: async (req, res) => {
     // temporary username and password values
-    const uName = req.body.username;
-    const pw = req.body.password;
+    const username = req.body.username;
+    const password = req.body.password;
 
     // if user data exist in the database
-    const user = await UserService.getUser({ username: uName });
+    const user = await UserService.getUser({ username: username });
     if (user != null) {
-      // compare user stored password with the inputted password
-      // bcrypt.compare(pw, user.password, function (equal) {
-      //   // if password inputted matches the stored password
-      //   if (equal) {
-      //     const accessToken = jwt.sign(uName, process.env.TOKEN_SECRET);
-      //     // send back username to client
-      //     return res.json({ accessToken: accessToken });
-      //   }
-      // });
+      // compare user's stored and hashed password with the inputted password
+      bcrypt.compare(password, user.password, function (err, result) {
+        // if inputted password matches the stored and hashed password
+        if (result) {
+          // generate access token with expected payload data for user authentication purposes
+          const userPayload = {
+            username: user.username,
+            firstname: user.firstname,
+            lastname: user.lastname,
+            email: user.email,
+          };
+          const accessToken = token.generateAccessToken(userPayload);
 
-      // TEMPORARY
-      if (pw === user.password) {
-        const accessToken = await token.generateAccessToken(user.username);
-        // const refreshToken = jwt.sign(user.username, process.env.)
-        // send back username to client
-        // refreshTokens.push(refreshToken);
-        return res.status(200).json({
-          accessToken: accessToken,
-          username: user.username,
-        });
-      }
+          req.session.token = accessToken;
+
+          // return access token and needed user data
+          return res.status(200).json({
+            accessToken: accessToken,
+            data: userPayload,
+            message: 'Successfully Logged In!',
+          });
+        } else {
+          // incorrect password was inputted
+          return res.status(403).json({ message: 'Incorrect password!' });
+        }
+      });
+    } else {
+      // username does not exist in the database
+      return res.status(403).json({ message: 'Username does not exist!' });
     }
-
-    // username or password is incorrect, send error message
-    const details = {
-      error: 'Incorrect username or password',
-    };
-    return res.status(422).json(details);
   },
 
   // index controller method to register (add) user to the database
@@ -86,9 +73,9 @@ const indexController = {
     const emailData = await UserService.getUser({ email: req.body.email });
 
     // if password and repeat (confirm) password do not match each other
-    if (req.body.pw !== req.body.repeatPw) {
+    if (req.body.password !== req.body.repeatPassword) {
       const details = {
-        error: 'Password and Repeat Password does not match each other.',
+        error: 'Password and Repeat Password fields do not match each other.',
       };
       return res.status(422).json(details);
       // if username already exists
@@ -116,18 +103,13 @@ const indexController = {
       };
 
       // hash password
-      user.password = await bcrypt.hash(req.body.pw, saltRounds);
+      user.password = await bcrypt.hash(req.body.password, saltRounds);
 
       // add user to database and get user data back
       const result = await UserService.addUser(user);
 
-      // generate jwt access token for session
-      const accessToken = await token.generateAccessToken(result.username);
-
-      return res.status(201).json({
-        accessToken: accessToken,
-        username: result.username,
-      });
+      // return user data back as indicator of successful registration
+      return res.status(201).json(result);
     }
   },
 };
